Replace varagrs by List<Object>